@@ -266,7 +266,7 @@ Unify \arg{Triples} with the number of existing triples using
 this predicate as second argument.  Reporting the number of 
 triples is intended to support query optimization.
 
-	\termitem{subject_branch_factor}{-Float}
+	\termitem{rdf_subject_branch_factor}{-Float}
 Unify \arg{Float} with the average number of triples associated with
 each unique value for the subject-side of this relation.  If there
 are no triples the value 0.0 is returned.  This value is cached with
@@ -274,12 +274,20 @@ the predicate and recomputed only after substantial changes to the
 triple set associated to this relation.  This property is indented
 for path optimalisation when solving conjunctions of rdf/3 goals.
 
-	\termitem{object_branch_factor}{-Float}
+	\termitem{rdf_object_branch_factor}{-Float}
 Unify \arg{Float} with the average number of triples associated with
 each unique value for the object-side of this relation.  In addition
 to the comments with the subject_branch_factor property, uniqueness
 of the object value is computed from the hash key rather than the
 actual values.
+
+	\termitem{rdfs_subject_branch_factor}{-Float}
+Same as \functor{rdf_subject_branch_factor}{1}, but also considering
+triples of `subPropertyOf' this relation.  See also rdf_has/3.
+
+	\termitem{rdfs_object_branch_factor}{-Float}
+Same as \functor{rdf_object_branch_factor}{1}, but also considering
+triples of `subPropertyOf' this relation. See also rdf_has/3.
     \end{description}
 \end{description}
 
@@ -592,9 +600,11 @@ Return the source-location as \arg{File}:\arg{Line} of the first triple
 that is about \arg{Subject}.
 
     \predicate{rdf_generation}{1}{-Generation}
-Returns the \arg{Generation} of the database.  Each modification to the
+Returns the \arg{Generation} of the database. Each modification to the
 database increments the generation. It can be used to check the validity
-of cached results deduced from the database.
+of cached results deduced from the database. Modifications changing
+multiple triples increment \arg{Generation} with the number of triples
+modified, providing a heuristic for `how dirty' cached results may be.
 
     \predicate{rdf_statistics}{1}{?Statistics}
 Report statistics collected by the \file{rdf_db} module.  Defined
